{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 23,
  "lineage": "33bf37a5-f060-b79c-46a6-2416bcac7460",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0dfb85e0af8ea624d",
            "egress": [],
            "id": "acl-0dfb85e0af8ea624d",
            "ingress": [],
            "owner_id": "286351152378",
            "subnet_ids": null,
            "tags": {
              "Name": "terraformvpc",
              "Owner": "pankaj",
              "project": "learning",
              "resourcetype": "vpc"
            },
            "vpc_id": "vpc-06723c526c739d3be"
          },
          "depends_on": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-031ae4acca4df8dcf",
            "id": "rtb-031ae4acca4df8dcf",
            "owner_id": "286351152378",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraformvpc",
              "Owner": "pankaj",
              "project": "learning",
              "resourcetype": "vpc"
            },
            "vpc_id": "vpc-06723c526c739d3be"
          },
          "depends_on": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286351152378:security-group/sg-02757502a841aef0b",
            "egress": [],
            "id": "sg-02757502a841aef0b",
            "ingress": [],
            "name": "default",
            "owner_id": "286351152378",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformvpc",
              "Owner": "pankaj",
              "project": "learning",
              "resourcetype": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-06723c526c739d3be"
          },
          "depends_on": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:286351152378:vpc/vpc-06723c526c739d3be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfb85e0af8ea624d",
            "default_route_table_id": "rtb-031ae4acca4df8dcf",
            "default_security_group_id": "sg-02757502a841aef0b",
            "dhcp_options_id": "dopt-1f5a5e78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06723c526c739d3be",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-031ae4acca4df8dcf",
            "owner_id": "286351152378",
            "tags": {
              "Name": "terraformvpc",
              "Owner": "pankaj",
              "project": "learning",
              "resourcetype": "vpc"
            }
          }
        }
      ]
    }
  ]
}